objects/ESC_Electronic_Request__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Age_of_Historical_Data__c</fullName>
        <inlineHelpText>Time range of the period queried. E.g. Mar 2001 to Dec 2013</inlineHelpText>
        <label>Age of Historical Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Alert_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hot Topic</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Electronic Requests (Hot Topic)</relationshipLabel>
        <relationshipName>Electronic_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Content_Type_C_E__c</fullName>
        <inlineHelpText>Further level of Content Classification</inlineHelpText>
        <label>Content Type (C&amp;E)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Content_Type__c</fullName>
        <inlineHelpText>Timeliness of data. E.g. Realtime, Historical, Reference</inlineHelpText>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Company Information</fullName>
                </value>
                <value>
                    <fullName>Credit Ratings</fullName>
                </value>
                <value>
                    <fullName>Cross Timeframe</fullName>
                </value>
                <value>
                    <fullName>Definition</fullName>
                </value>
                <value>
                    <fullName>Delayed Data</fullName>
                </value>
                <value>
                    <fullName>Delayed News</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Forecast data</fullName>
                </value>
                <value>
                    <fullName>Historical data</fullName>
                </value>
                <value>
                    <fullName>ICW</fullName>
                </value>
                <value>
                    <fullName>Intraday data</fullName>
                </value>
                <value>
                    <fullName>Point in Time data</fullName>
                </value>
                <value>
                    <fullName>Real-Time data</fullName>
                </value>
                <value>
                    <fullName>Reference Data</fullName>
                </value>
                <value>
                    <fullName>Revision Scoop</fullName>
                </value>
                <value>
                    <fullName>Snapshot Data</fullName>
                </value>
                <value>
                    <fullName>Terms and Conditions</fullName>
                </value>
                <value>
                    <fullName>TR Calculated Data</fullName>
                </value>
                <value>
                    <fullName>TR Evaluated Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Geographic_Impact__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Data_Field_Fundamentals__c</fullName>
        <label>Data Field Fundamentals</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Data_Field__c</fullName>
        <inlineHelpText>Field being queried e.g. Trade price, EPS, Yield, Coupon</inlineHelpText>
        <label>Data Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>% of Shares outstanding</fullName>
                </value>
                <value>
                    <fullName>Accounting Standard</fullName>
                </value>
                <value>
                    <fullName>Account Receivable</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Acquisition Technique</fullName>
                </value>
                <value>
                    <fullName>Actual Value</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Adjustment Indicator</fullName>
                </value>
                <value>
                    <fullName>Adoption Impetus</fullName>
                </value>
                <value>
                    <fullName>ADR Ratio</fullName>
                </value>
                <value>
                    <fullName>Advisors</fullName>
                </value>
                <value>
                    <fullName>AFO - Adjusted funds from operations per share</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Alliance Cross Border Flag</fullName>
                </value>
                <value>
                    <fullName>Alliance Cross Licensing Agreement Flag</fullName>
                </value>
                <value>
                    <fullName>Alliance Cross Technology Transfer Flag</fullName>
                </value>
                <value>
                    <fullName>Alliance Deal Participants</fullName>
                </value>
                <value>
                    <fullName>Alliance Exclusive Licensing Agreement Flag</fullName>
                </value>
                <value>
                    <fullName>Alliance Industry</fullName>
                </value>
                <value>
                    <fullName>Alliance Status</fullName>
                </value>
                <value>
                    <fullName>Alliance Technique</fullName>
                </value>
                <value>
                    <fullName>Alliance Technology Transfer Flag</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Amounts</fullName>
                </value>
                <value>
                    <fullName>AMT - Amortization</fullName>
                </value>
                <value>
                    <fullName>Analyst information</fullName>
                </value>
                <value>
                    <fullName>Annual report</fullName>
                </value>
                <value>
                    <fullName>Ask</fullName>
                </value>
                <value>
                    <fullName>Asset Class</fullName>
                </value>
                <value>
                    <fullName>Auction Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Data_Source_Country__c</fullName>
        <inlineHelpText>Country location of the Source</inlineHelpText>
        <label>Data Source Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Data_Source_Name__c</fullName>
        <inlineHelpText>Enter the source of the data</inlineHelpText>
        <label>Data Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Data_Source_Type__c</fullName>
        <inlineHelpText>Classifies the origin of the data e.g. Exchange, Central bank, Broker</inlineHelpText>
        <label>Data Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ADR websites</fullName>
                </value>
                <value>
                    <fullName>Advisor Submission</fullName>
                </value>
                <value>
                    <fullName>Brokers</fullName>
                </value>
                <value>
                    <fullName>Calculation Agent</fullName>
                </value>
                <value>
                    <fullName>Call to the Company</fullName>
                </value>
                <value>
                    <fullName>Central Bank</fullName>
                </value>
                <value>
                    <fullName>Central Banks</fullName>
                </value>
                <value>
                    <fullName>Clearing System</fullName>
                </value>
                <value>
                    <fullName>Client Information given through Siebel/Corporate Services</fullName>
                </value>
                <value>
                    <fullName>Company Website</fullName>
                </value>
                <value>
                    <fullName>Company websites</fullName>
                </value>
                <value>
                    <fullName>Contributions - OTC - Broker</fullName>
                </value>
                <value>
                    <fullName>Contributions - OTC - Non Broker</fullName>
                </value>
                <value>
                    <fullName>Contributors - OTC - Broker</fullName>
                </value>
                <value>
                    <fullName>Contributors - OTC - Non Broker</fullName>
                </value>
                <value>
                    <fullName>Daily trades</fullName>
                </value>
                <value>
                    <fullName>Editorial</fullName>
                </value>
                <value>
                    <fullName>EIKON</fullName>
                </value>
                <value>
                    <fullName>Emails</fullName>
                </value>
                <value>
                    <fullName>Feed vendor</fullName>
                </value>
                <value>
                    <fullName>Filings</fullName>
                </value>
                <value>
                    <fullName>Fixing Associations</fullName>
                </value>
                <value>
                    <fullName>Govt Agencies</fullName>
                </value>
                <value>
                    <fullName>IFR news</fullName>
                </value>
                <value>
                    <fullName>Index Vendors</fullName>
                </value>
                <value>
                    <fullName>International Forecast &amp; Survey Agencies</fullName>
                </value>
                <value>
                    <fullName>International Industrial Associations</fullName>
                </value>
                <value>
                    <fullName>International Statistical Agencies</fullName>
                </value>
                <value>
                    <fullName>Issuer</fullName>
                </value>
                <value>
                    <fullName>Lead Manager/ Underwritter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Estimated_Resolution_Time__c</fullName>
        <label>Estimated Resolution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Feeds__c</fullName>
        <label>Feeds</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IDN</fullName>
                </value>
                <value>
                    <fullName>TDN</fullName>
                </value>
                <value>
                    <fullName>Elektron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_First_Case_Received_At__c</fullName>
        <label>First Case Received At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Geographic_Impact__c</fullName>
        <label>Geographic Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_HT_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Hot Topic Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Hot_Topic_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Hot Topic Requests</relationshipLabel>
        <relationshipName>Electronic_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Identifier_Type__c</fullName>
        <description>Identifies the type of data being queried e.g. RIC, ISIN,</description>
        <inlineHelpText>Refers to the type of Identifier, Code or Name. E.g. RIC, ISIN, Company Name</inlineHelpText>
        <label>Identifier Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asset id</fullName>
                </value>
                <value>
                    <fullName>Attribution Code</fullName>
                </value>
                <value>
                    <fullName>Bridge Symbol</fullName>
                </value>
                <value>
                    <fullName>Chain</fullName>
                </value>
                <value>
                    <fullName>CIK</fullName>
                </value>
                <value>
                    <fullName>Common Code</fullName>
                </value>
                <value>
                    <fullName>Common Code (CCE)</fullName>
                </value>
                <value>
                    <fullName>Company Name</fullName>
                </value>
                <value>
                    <fullName>Company Ticker</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>CRT RIC</fullName>
                </value>
                <value>
                    <fullName>Cusip</fullName>
                </value>
                <value>
                    <fullName>Cusip/CINS</fullName>
                </value>
                <value>
                    <fullName>Disclosure ID</fullName>
                </value>
                <value>
                    <fullName>DS Code</fullName>
                </value>
                <value>
                    <fullName>Ecowin Code</fullName>
                </value>
                <value>
                    <fullName>Exchange Ticker</fullName>
                </value>
                <value>
                    <fullName>IBES code</fullName>
                </value>
                <value>
                    <fullName>IBES ticker</fullName>
                </value>
                <value>
                    <fullName>ICB Code</fullName>
                </value>
                <value>
                    <fullName>Incoterms</fullName>
                </value>
                <value>
                    <fullName>Index Official Code</fullName>
                </value>
                <value>
                    <fullName>Industry Classification</fullName>
                </value>
                <value>
                    <fullName>Investext ticker</fullName>
                </value>
                <value>
                    <fullName>IRS</fullName>
                </value>
                <value>
                    <fullName>ISIN</fullName>
                </value>
                <value>
                    <fullName>ISO code</fullName>
                </value>
                <value>
                    <fullName>Language Code</fullName>
                </value>
                <value>
                    <fullName>Local code</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Identifier_Value__c</fullName>
        <inlineHelpText>Enter example Identifiers, Codes or Names queried. E.g. TRI.N, US10YT=RR, EUR=</inlineHelpText>
        <label>Identifier Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Incident_Details__c</fullName>
        <label>Incident Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Incident_Start_Time__c</fullName>
        <label>Incident Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Incident_Status__c</fullName>
        <label>Alert Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                    <default>true</default>
                    <label>Unconfirmed</label>
                </value>
                <value>
                    <fullName>Retrospective</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Incident_Title__c</fullName>
        <label>Incident Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Market_Focus_Region__c</fullName>
        <inlineHelpText>Geographical region of the Market featured in the Content Set / Asset Class</inlineHelpText>
        <label>Market Focus (Region)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASIA (Asia and Australia)</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Market_Sector__c</fullName>
        <description>Market Content being queried relates to</description>
        <inlineHelpText>Content Set / Asset Class queried (AKA Market Sector)</inlineHelpText>
        <label>Content Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commodities &amp; Energy</fullName>
                </value>
                <value>
                    <fullName>Deals</fullName>
                </value>
                <value>
                    <fullName>Derivatives</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Estimates</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Funds</fullName>
                </value>
                <value>
                    <fullName>FX/MM</fullName>
                </value>
                <value>
                    <fullName>Indices</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>Public Filings</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>SEC Delta</fullName>
                </value>
                <value>
                    <fullName>Lipper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Market_sector_Sub_Type_1__c</fullName>
        <inlineHelpText>Subject Area within the Content Set / Asset Class queried</inlineHelpText>
        <label>Content Set Subtype 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Actuals</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Annual Report</fullName>
                </value>
                <value>
                    <fullName>Bond Indices</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Breaking Views</fullName>
                </value>
                <value>
                    <fullName>Calendar Spread Options</fullName>
                </value>
                <value>
                    <fullName>COA Code</fullName>
                </value>
                <value>
                    <fullName>Code Query/Code Set ups</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Consolidated Report</fullName>
                </value>
                <value>
                    <fullName>Consumer Sector</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contact Additions/Movements</fullName>
                </value>
                <value>
                    <fullName>Convertibles</fullName>
                </value>
                <value>
                    <fullName>Corporate Actions</fullName>
                </value>
                <value>
                    <fullName>Corporate Client Entitlement Inquiries</fullName>
                </value>
                <value>
                    <fullName>Coverage Request</fullName>
                </value>
                <value>
                    <fullName>Credit Default Swaps</fullName>
                </value>
                <value>
                    <fullName>Cross Asset</fullName>
                </value>
                <value>
                    <fullName>Current Officers</fullName>
                </value>
                <value>
                    <fullName>Datastream calcualted Indices</fullName>
                </value>
                <value>
                    <fullName>Data Validation</fullName>
                </value>
                <value>
                    <fullName>Declarable Stakes</fullName>
                </value>
                <value>
                    <fullName>Depository Receipts</fullName>
                </value>
                <value>
                    <fullName>Derived Data</fullName>
                </value>
                <value>
                    <fullName>Descriptive Data</fullName>
                </value>
                <value>
                    <fullName>Dividend</fullName>
                </value>
                <value>
                    <fullName>Earnings</fullName>
                </value>
                <value>
                    <fullName>Economic Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>